fix: fixing footer

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </span>
             </div>
             <footer>
-                &#169; This Calculator belongs to Felipe
+                &#169; Everyone Can Get Rich
             </footer>
         </div>
     </body>
